utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/RequiredAttributesModule.ide
package invalid

typedef module RequiredAttributesModule {

}
